--- a/src/root/index.css
+++ b/src/root/index.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .btn-primary {
+    @apply bg-blue-600 hover:bg-blue-700;
+  }
+
+  .btn-success {
+    @apply bg-green-600 hover:bg-green-700;
+  }
+
+  .btn-error {
+    @apply bg-red-600 hover:bg-red-700;
+  }
+}
